# klevret-english-ver

./: .gitignore  CMakeLists.txt  README.md
cli/: .gitignore  CMakeLists.txt
cli/src/: Command.cpp  Command.hpp  Console.cpp  Console.hpp  ConsoleController.cpp  ConsoleController.hpp  WrapperForParsing.cpp  WrapperForParsing.hpp  command_handlers.cpp  command_handlers.hpp  ip_addresses.cpp  ip_addresses.hpp  main.cpp
cli/tests/: CMakeLists.txt
cmake/: PrepareBoostModule.cmake
common/: .gitignore  backup.CMakeLists.txt
common/src/: TcoListener.cpp  TcpListener.hpp  utils.cpp
common/tests/: CMakeLists.txt
common/tests/src/: common_tests.cpp
core/: CMakeLists.txt  README.md
core/src/: main.cpp
dhcp/: CMakeLists.txt  DhcpMessage.cpp  DhcpMessage.h  DhcpOption.cpp  DhcpOption.h  HardwareAddress.cpp  HardwareAddress.h  IpAddress.cpp  IpAddress.h  README.md  endians.cpp  endians.h  main.cpp
dhcp/src/: AddressPool.cpp  AddressPool.hpp  Defer.hpp  DhcpMessage.cpp  DhcpMessage.hpp  DhcpOption.cpp  DhcpOption.hpp  HardwareAddress.cpp  HardwareAddress.hpp  IpAddress.cpp  IpAddress.hpp  NetworkInterface.cpp  NetworkInterface.hpp  UdpListener.cpp  UdpListener.hpp  WrapperForParsing.cpp  WrapperForParsing.hpp  api_server.cpp  api_server.hpp  endians.hpp  main.cpp
dhcp/tests/: CMakeLists.txt  main.cpp
dhcp/tests/src/: IpAddress_test.cpp  endians_test.cpp
frontend/: README.md
